@@ -613,25 +613,33 @@ void web_server_thread(int* port, bool ssl)
 	char buf[10000];
 	int len = 0;
 	int offset = 0;
+	bool connection_close = false;
 	stream_socket s(ios);
 
 	for (;;)
 	{
-		s.close(ec);
-
-		len = 0;
-		offset = 0;
-		accept_done = false;
-		acceptor.async_accept(s, &on_accept);
-		ios.reset();
-		ios.run_one();
-		if (!accept_done)
+		if (connection_close)
 		{
-			fprintf(stderr, "accept failed\n");
-			return;
+			s.close(ec);
+			connection_close = false;
 		}
 
-		if (!s.is_open()) continue;
+		if (!s.is_open())
+		{
+			len = 0;
+			offset = 0;
+
+			accept_done = false;
+			acceptor.async_accept(s, &on_accept);
+			ios.reset();
+			ios.run_one();
+			if (!accept_done)
+			{
+				fprintf(stderr, "accept failed\n");
+				return;
+			}
+			if (!s.is_open()) continue;
+		}
 
 		http_parser p;
 		bool failed = false;
@@ -663,9 +671,9 @@ void web_server_thread(int* port, bool ssl)
 					break;
 				}
 				len += received;
-	
-	
+		
 				p.incoming(buffer::const_interval(buf + offset, buf + len), error);
+
 				TEST_CHECK(error == false);
 				if (error)
 				{
@@ -674,11 +682,27 @@ void web_server_thread(int* port, bool ssl)
 					break;
 				}
 			}
+
+			std::string connection = p.header("connection");
+			std::string via = p.header("via");
+
+			// The delegate proxy doesn't say connection close, but it expects it to be closed
+			// the Via: header is an indicator of delegate making the request
+			if (connection == "close" || !via.empty())
+			{
+				connection_close = true;
+			}
+
 //			fprintf(stderr, "%s", std::string(buf + offset, p.body_start()).c_str());
 
-			if (failed) break;
+			if (failed)
+			{
+				s.close(ec);
+				break;
+			}
 
 			offset += p.body_start() + p.content_length();
+//			fprintf(stderr, "offset: %d len: %d\n", offset, len);
 
 			if (p.method() != "get" && p.method() != "post")
 			{
@@ -770,6 +794,9 @@ void web_server_thread(int* port, bool ssl)
 					write(s, boost::asio::buffer(&file_buf[0], file_buf.size()), boost::asio::transfer_all(), ec);
 			}
 //			fprintf(stderr, "%d bytes left in receive buffer. offset: %d\n", len - offset, offset);
+			memmove(buf, buf + offset, len - offset);
+			len -= offset;
+			offset = 0;
 		} while (offset < len);
 	}
 	fprintf(stderr, "exiting web server thread\n");
